// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<tr>
  <PluginDescription
    plugin={
      {
        "key": "sonar-foo",
        "name": "Sonar Foo",
        "release": {
          "date": "2020-01-01",
          "version": "8.2",
        },
        "update": {
          "requires": [],
          "status": "available",
        },
      }
    }
  />
  <td
    className="text-top big-spacer-right"
  >
    <ul>
      <li
        className="display-flex-row little-spacer-bottom"
      >
        <div
          className="pull-left spacer-right"
        >
          <span
            className="badge badge-success"
          >
            8.2
          </span>
        </div>
        <div>
          <PluginChangeLogButton
            release={
              {
                "date": "2020-01-01",
                "version": "8.2",
              }
            }
            update={
              {
                "requires": [],
                "status": "available",
              }
            }
          />
        </div>
      </li>
    </ul>
  </td>
  <td
    className="text-top width-20"
  >
    <ul>
      <PluginUrls
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [],
              "status": "available",
            },
          }
        }
      />
      <PluginLicense />
      <PluginOrganization
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [],
              "status": "available",
            },
          }
        }
      />
    </ul>
  </td>
  <PluginStatus
    plugin={
      {
        "key": "sonar-foo",
        "name": "Sonar Foo",
        "release": {
          "date": "2020-01-01",
          "version": "8.2",
        },
        "update": {
          "requires": [],
          "status": "available",
        },
      }
    }
    refreshPending={[MockFunction]}
  />
</tr>
`;

exports[`should render correctly: has requirements 1`] = `
<tr>
  <PluginDescription
    plugin={
      {
        "key": "sonar-foo",
        "name": "Sonar Foo",
        "release": {
          "date": "2020-01-01",
          "version": "8.2",
        },
        "update": {
          "requires": [
            {
              "key": "sonar-foo",
              "name": "Sonar Foo",
            },
          ],
          "status": "available",
        },
      }
    }
  />
  <td
    className="text-top big-spacer-right"
  >
    <ul>
      <li
        className="display-flex-row little-spacer-bottom"
      >
        <div
          className="pull-left spacer-right"
        >
          <span
            className="badge badge-success"
          >
            8.2
          </span>
        </div>
        <div>
          <PluginChangeLogButton
            release={
              {
                "date": "2020-01-01",
                "version": "8.2",
              }
            }
            update={
              {
                "requires": [
                  {
                    "key": "sonar-foo",
                    "name": "Sonar Foo",
                  },
                ],
                "status": "available",
              }
            }
          />
          <p
            className="little-spacer-top"
          >
            <strong>
              marketplace.installing_this_plugin_will_also_install_x.Sonar Foo
            </strong>
          </p>
        </div>
      </li>
    </ul>
  </td>
  <td
    className="text-top width-20"
  >
    <ul>
      <PluginUrls
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [
                {
                  "key": "sonar-foo",
                  "name": "Sonar Foo",
                },
              ],
              "status": "available",
            },
          }
        }
      />
      <PluginLicense />
      <PluginOrganization
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [
                {
                  "key": "sonar-foo",
                  "name": "Sonar Foo",
                },
              ],
              "status": "available",
            },
          }
        }
      />
    </ul>
  </td>
  <PluginStatus
    plugin={
      {
        "key": "sonar-foo",
        "name": "Sonar Foo",
        "release": {
          "date": "2020-01-01",
          "version": "8.2",
        },
        "update": {
          "requires": [
            {
              "key": "sonar-foo",
              "name": "Sonar Foo",
            },
          ],
          "status": "available",
        },
      }
    }
    refreshPending={[MockFunction]}
  />
</tr>
`;

exports[`should render correctly: has requirements, some of them already met 1`] = `
<tr>
  <PluginDescription
    plugin={
      {
        "key": "sonar-foo",
        "name": "Sonar Foo",
        "release": {
          "date": "2020-01-01",
          "version": "8.2",
        },
        "update": {
          "requires": [
            {
              "key": "sonar-foo",
              "name": "Sonar Foo",
            },
            {
              "filename": "sonar-bar-1.0.jar",
              "hash": "hash",
              "implementationBuild": "1.0.0.1234",
              "key": "sonar-bar",
              "name": "Sonar Bar",
              "sonarLintSupported": false,
              "updatedAt": 100,
              "version": "1.0",
            },
          ],
          "status": "available",
        },
      }
    }
  />
  <td
    className="text-top big-spacer-right"
  >
    <ul>
      <li
        className="display-flex-row little-spacer-bottom"
      >
        <div
          className="pull-left spacer-right"
        >
          <span
            className="badge badge-success"
          >
            8.2
          </span>
        </div>
        <div>
          <PluginChangeLogButton
            release={
              {
                "date": "2020-01-01",
                "version": "8.2",
              }
            }
            update={
              {
                "requires": [
                  {
                    "key": "sonar-foo",
                    "name": "Sonar Foo",
                  },
                  {
                    "filename": "sonar-bar-1.0.jar",
                    "hash": "hash",
                    "implementationBuild": "1.0.0.1234",
                    "key": "sonar-bar",
                    "name": "Sonar Bar",
                    "sonarLintSupported": false,
                    "updatedAt": 100,
                    "version": "1.0",
                  },
                ],
                "status": "available",
              }
            }
          />
          <p
            className="little-spacer-top"
          >
            <strong>
              marketplace.installing_this_plugin_will_also_install_x.Sonar Foo
            </strong>
          </p>
        </div>
      </li>
    </ul>
  </td>
  <td
    className="text-top width-20"
  >
    <ul>
      <PluginUrls
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [
                {
                  "key": "sonar-foo",
                  "name": "Sonar Foo",
                },
                {
                  "filename": "sonar-bar-1.0.jar",
                  "hash": "hash",
                  "implementationBuild": "1.0.0.1234",
                  "key": "sonar-bar",
                  "name": "Sonar Bar",
                  "sonarLintSupported": false,
                  "updatedAt": 100,
                  "version": "1.0",
                },
              ],
              "status": "available",
            },
          }
        }
      />
      <PluginLicense />
      <PluginOrganization
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [
                {
                  "key": "sonar-foo",
                  "name": "Sonar Foo",
                },
                {
                  "filename": "sonar-bar-1.0.jar",
                  "hash": "hash",
                  "implementationBuild": "1.0.0.1234",
                  "key": "sonar-bar",
                  "name": "Sonar Bar",
                  "sonarLintSupported": false,
                  "updatedAt": 100,
                  "version": "1.0",
                },
              ],
              "status": "available",
            },
          }
        }
      />
    </ul>
  </td>
  <PluginStatus
    plugin={
      {
        "key": "sonar-foo",
        "name": "Sonar Foo",
        "release": {
          "date": "2020-01-01",
          "version": "8.2",
        },
        "update": {
          "requires": [
            {
              "key": "sonar-foo",
              "name": "Sonar Foo",
            },
            {
              "filename": "sonar-bar-1.0.jar",
              "hash": "hash",
              "implementationBuild": "1.0.0.1234",
              "key": "sonar-bar",
              "name": "Sonar Bar",
              "sonarLintSupported": false,
              "updatedAt": 100,
              "version": "1.0",
            },
          ],
          "status": "available",
        },
      }
    }
    refreshPending={[MockFunction]}
  />
</tr>
`;

exports[`should render correctly: read only 1`] = `
<tr>
  <PluginDescription
    plugin={
      {
        "key": "sonar-foo",
        "name": "Sonar Foo",
        "release": {
          "date": "2020-01-01",
          "version": "8.2",
        },
        "update": {
          "requires": [],
          "status": "available",
        },
      }
    }
  />
  <td
    className="text-top big-spacer-right"
  >
    <ul>
      <li
        className="display-flex-row little-spacer-bottom"
      >
        <div
          className="pull-left spacer-right"
        >
          <span
            className="badge badge-success"
          >
            8.2
          </span>
        </div>
        <div>
          <PluginChangeLogButton
            release={
              {
                "date": "2020-01-01",
                "version": "8.2",
              }
            }
            update={
              {
                "requires": [],
                "status": "available",
              }
            }
          />
        </div>
      </li>
    </ul>
  </td>
  <td
    className="text-top width-20"
  >
    <ul>
      <PluginUrls
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [],
              "status": "available",
            },
          }
        }
      />
      <PluginLicense />
      <PluginOrganization
        plugin={
          {
            "key": "sonar-foo",
            "name": "Sonar Foo",
            "release": {
              "date": "2020-01-01",
              "version": "8.2",
            },
            "update": {
              "requires": [],
              "status": "available",
            },
          }
        }
      />
    </ul>
  </td>
</tr>
`;
